Fix lightbox on IE

--- a/src/encoded/static/scss/encoded/modules/_lightbox.scss
+++ b/src/encoded/static/scss/encoded/modules/_lightbox.scss
@@ -5,7 +5,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: #000;
+    background-color: #fff;
     background-color: rgba(255,255,255,.8);
     opacity: 0;
     z-index: 1100;
@@ -35,7 +35,7 @@
 
     a {
         position: relative;
-        display: inline-block;
+        display: block;
         vertical-align: middle;
         margin: 0 auto;
         text-align: left;
