--- a/src/encoded/static/scss/encoded/modules/_panels.scss
+++ b/src/encoded/static/scss/encoded/modules/_panels.scss
@@ -7,7 +7,7 @@
     margin-top: 10px;
     margin-bottom: 20px;
     padding: 15px 30px;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .panel-blue {
